# notes

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: deploy.yml
docs/: index.md
search/: search_index.json
